# blog_flask

./: database.db  pyproject.toml
app/: __init__.py  config.py  models.py
app/posts/: __init__.py  views.py
app/static/css/: index.css
app/templates/: detail.html  index.html
app/templates/partials/: base.html  footer.html  nav.html
migrations/: env.py
migrations/versions/: f3cc48f4169f_user_e_post.py
templates/: detail.css  detail.html  index.css  index.html
